remove english title

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,7 +108,7 @@
                         alt="Crypto Icon"
                         style="width: 20px; height: 20px; vertical-align: middle"
                     />
-                    {{ item.titlePersian }} ({{ item.titleEnglish }})
+                    {{ item.titlePersian }} 
                     </td>
                     <td>{{ item.priceToman }}</td>
                     <td>{{ item.priceDollar }}</td>
