--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,8 +34,7 @@
         <div class="fixed-background"></div>
 
         <div class="overlay"></div>
-        <div class="container">
-        <div id="app">
+        <div id="app" class="container">
             <div class="wrapper-header">
                 <h1>نرخ روز |</h1>
                 <img src="/upsite_1737463211_kalaletrade-profile.png"></img>
@@ -116,7 +115,6 @@
                 </template>
             </tbody>
             </table>
-        </div>
         </div>
         <script>
             new Vue({
